[workspace]
members = [
    "packages/core",
    "packages/fs",
    "packages/op",
    "packages/smb",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
inventory = "0.3"
serde = "1"
serde_json = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_code     = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
wildcard_imports        = "allow"
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
items_after_statements  = "allow"
struct_excessive_bools  = "allow"
similar_names           = "allow"
many_single_char_names  = "allow"

[profile.release]
lto = true
strip = true
